removes fixed position on footer to stop the footer from covering up the entire bottom half of small phone screens

--- a/src/index.css
+++ b/src/index.css
@@ -140,7 +140,6 @@ mark {
 
 .footer {
   display: flex;
-  position: fixed;
   padding: 0;
   margin: 0;
   bottom: 0;
